# -k

./: README.md  pyproject.toml
src/: Readme.ipynb  etymology_db.json  geminiModelInterfacer.py  huggingfaceproxy.py  kca.py
