[project]
name = "kca"
version = "0.0.1"
license = "Apache-2.0"
description = "Gemini  — Gemini Live Agent Challenge"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "audioop-lts>=0.2.2",
    "dspy-ai>=3.1.3",
    "duckdb>=1.5.0",
    "google-cloud-run>=0.15.0",
    "google-genai>=1.67.0",
    "ipywidgets>=8.1.8",
    "itables>=2.7.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "polars[pyarrow]>=1.39.0",
    "pyaudio>=0.2.14",
]
